# opt_vbyte

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp  drop_caches.c  scan_perftest.cpp
include/: VarIntG8IU.h  all_ones_sequence.hpp  binary_blocks_collection.hpp  binary_collection.hpp  binary_freq_collection.hpp  bitmap_tables.h  bitvector_collection.hpp  block_codecs.hpp  block_freq_index.hpp  block_posting_list.hpp  block_profiler.hpp  block_sequence.hpp  bm25.hpp  compact_elias_fano.hpp  compact_ranked_bitvector.hpp  configuration.hpp  freq_index.hpp  global_parameters.hpp  index_build_utils.hpp  indexed_sequence.hpp  integer_codes.hpp  interpolative_coding.hpp  opt_vbyte.hpp  optimal_partition.hpp  optimizer.hpp  partitioned_sequence.hpp  partitioned_sequence_enumerator.hpp  partitioned_vb_sequence.hpp  positive_sequence.hpp  queries.hpp  queues.hpp  sequence_collection.hpp  strict_elias_fano.hpp  strict_sequence.hpp  typedefs.hpp  types.hpp  uncompressed_upper_bounds.hpp  uniform_partitioned_sequence.hpp  uniform_partitioned_sequence_enumerator.hpp  util.hpp  (+3 more)
scripts/: build_indexes.py  collect_timings.py
src/: CMakeLists.txt  bitmap_tables.h  check_index.cpp  create_freq_index.cpp  create_wand_data.cpp  decode.cpp  encode.cpp  queries.cpp
